# iprfc

./: CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: ci.yml  loc.yml
src/: forwarding_black_list.rs  lib.rs  rfc1112.rs  rfc1122.rs  rfc1918.rs  rfc2544.rs  rfc2765.rs  rfc2928.rs  rfc3056.rs  rfc3068.rs  rfc3171.rs  rfc3330.rs  rfc3849.rs  rfc3927.rs  rfc4038.rs  rfc4193.rs  rfc4291.rs  rfc4380.rs  rfc4773.rs  rfc4843.rs  rfc5180.rs  rfc5735.rs  rfc5737.rs  rfc6052.rs  rfc6333.rs  rfc6598.rs  rfc6666.rs  rfc6890.rs  rfc7335.rs  rfc919.rs  rfc9637.rs  semantic.rs
