[package]
name = "iprfc"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/al8n/iprfc"
homepage = "https://github.com/al8n/iprfc"
documentation = "https://docs.rs/iprfc"
description = "Known RFCs for IP addresses"
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
categories = ["network-programming", "no-std"]
keywords = ["ip", "networking", "rfc6890", "rfc"]

[features]
default = ["std"]
std = ["ipnet/default", "bitflags/std"]
serde = ["dep:serde", "ipnet/serde", "bitflags/serde"]

[dependencies]
bitflags = { version = "2", default-features = false }
paste = "1"
ipnet = { version = "^2.11", default-features = false }

serde = { version = "1", optional = true, features = ["derive"] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

